---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: ??. ??. ??
  Info:
    - Change factorio version to 1.0
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 29. 07. 2020
  Features:
    - Added Simple mode - this mode generates only up to 3 recipes - reversed ingredients, reversed result and both reversed, skipping the other permutations. Disabled by default. If enabled, it will remove all the skipped permutations from existing saves upon loading them
  Info:
    - Store recipe names in the permutation control registry instead of table references. This should reduce saving and loading speeds a bit. Saving and loading speeds were not a problem, just making some optimazations
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 25. 07. 2020
  Info:
    - Some code cleanup
    - Reversed iteration order of the permutations when selecting a permutation
  Bugfixes:
    - Added SuperExpensiveMode as an optional dependency
    - Fixed code for permutation generation for expensive mode
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 16. 06. 2020
  Info:
    - Change Factorio version to 0.18
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 16. 06. 2020
  Bugfixes:
    - Add H2O as an optional dependency
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 21. 01. 2020
  Bugfixes:
    - Add Momo +(30)Science Mod as an optional dependency
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 15. 01. 2020
  Bugfixes: