@@ -16,7 +16,9 @@ previous-results-fluid-recipe=Change to the previous results permutation of a fl
 [mod-setting-name]
 fluid-permutations-threshold=Permutations threshold
 fluid-permutations-simple-mode=Simple mode
+fluid-permutations-cross-cycle=Cross cycle mode
 
 [mod-setting-description]
 fluid-permutations-threshold=If a recipe has more permutations than this number it will be skipped
 fluid-permutations-simple-mode=Generate only reversed recipes, skipping the other possible permutations. Enabling this will remove the skipped permutations from existing games.
+fluid-permutations-cross-cycle=Cycle through all available permutations (ingredients and results) with any of the controls/hotkeys
